# binary_tries_BK_BF

./: .gitignore  CMakeLists.txt  README.md  buildme.sh  makefile  makefile111  runme.sh
queries/CC-news/: delta_query_2_1.4m_1.5m.txt  delta_query_2_500k_600k.txt  delta_query_2_600k_700k.txt  delta_query_2_700k_800k.txt  delta_query_2_800k_900k.txt  delta_query_2_900k_1m.txt  delta_query_3_1.4m_1.5m.txt  delta_query_3_500k_600k.txt  delta_query_3_600k_700k.txt  delta_query_3_700k_800k.txt  delta_query_3_800k_900k.txt  delta_query_3_900k_1m.txt  delta_query_4more_1.4m_1.5m.txt  delta_query_4more_500k_600k.txt  delta_query_4more_700k_800k.txt  delta_query_4more_800k_900k.txt  delta_query_4more_900k_1m.txt
src/: barbay_and_kenyon.hpp  binTrie_ilRL.hpp  binarySearch.hpp  delta_trie_certificate.hpp  flatBinTrie.hpp  flatBinTrieRL.hpp  hybrid_structure_flat.hpp  hybrid_structure_il.hpp  intersection.hpp  intersection_brute_force.hpp  intersection_high_btrie_log.hpp  new_baseline.hpp  structures.hpp
test/: CMakeLists.txt  barbay_kenyon_log  barbay_kenyon_log.cpp  build_fastTries.cpp  build_tries.cpp  build_tries_h.cpp  delta_barby_kenyon_log.cpp  delta_trie_certificate_log.cpp  intersection_baseline.cpp  intersection_query_high_btrie_log.cpp  intersection_query_log.cpp  report_high_btrie_log.cpp
