add_executable(build_tries build_tries.cpp)
add_executable(build_htries build_tries_h.cpp)
add_executable(build_ftries build_fastTries.cpp)
add_executable(barbay_kenyon_log barbay_kenyon_log.cpp)
add_executable(delta_barby_kenyon_log delta_barby_kenyon_log.cpp)
add_executable(delta_trie_certificate_log delta_trie_certificate_log.cpp)
add_executable(run_htries_ intersection_query_high_btrie_log.cpp)
add_executable(run_htries intersection_query_log.cpp)
add_executable(run_baseline intersection_baseline.cpp)
add_executable(report_high_btrie_log report_high_btrie_log.cpp)

target_link_libraries(build_tries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_htries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_ftries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(barbay_kenyon_log PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(delta_barby_kenyon_log PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(delta_trie_certificate_log PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(run_htries PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(run_htries_ PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(run_baseline PUBLIC sdsl divsufsort divsufsort64 pthread)
target_link_libraries(report_high_btrie_log PUBLIC sdsl divsufsort divsufsort64 pthread)